--- a/index.html
+++ b/index.html
@@ -20,9 +20,29 @@
         <ul class="user-navigation">
           <li class="login-link">Вход</li>
         </ul>
-
       </nav>
     </header>
+    <main class="container">
+      <h1 class="visually-hidden">Барбершоп "Бородинский"</h1>
+      <section class="features">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="features-list">
+          <li class="features-item">
+            <h3>БЫСТРО</h3>
+            <p>МЫ ДЕЛАЕМ СВОЮ РАБОТУ БЫСТРО! ДВА ЧАСА ПРОЛЕТЯТ НЕЗАМЕТНО И ВЫ —
+              СЧАСТЛИВЫЙ ОБЛАДАТЕЛЬ СТИЛЬНОЙ СТРИЖКИ-МИНУТКИ!</p>
+          </li>
+          <li class="features-item">
+            <h3>КРУТО</h3>
+            <p>ЗАБУДЬТЕ, КАК ВЫ СТРИГЛИСЬ РАНЬШЕ.МЫ СДЕЛАЕМ ИЗ ВАС ЗВЕЗДУ ФУТБОЛА ИЛИ КИНО!ВО ВСЯКОМ СЛУЧАЕ ВНЕШНЕ.</p>
+          </li>
+          <li class="features-item">
+            <h3>ДОРОГО</h3>
+            <p>НАШИ МАСТЕРА — ПРОФЕССИОНАЛЫ СВОЕГО ДЕЛА И НЕ МОГУТ СТОИТЬ ДЕШЕВО. К ТОМУ ЖЕ, РАЗВЕ ЦЕНА НЕ ДАЕТ ОПРЕДЕЛЕНЫЙ СТАТУС?</p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
 
   </body>
