--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </ul>
       </section>
       <section class="news">
-        <h2>Новости</h2>
+        <h2>НОВОСТИ</h2>
         <ul class="news-list">
           <li class="news-item">
             <p>НАМ НАКОНЕЦ ЗАВЕЗЛИ ЯГЕРМАЙСТЕР! ТЕПЕРЬ ВЫ МОЖЕТЕ ПРОПУСТИТЬ СТАКАНЧИК ВО ВРЕМЯ СТРИЖКИ</p>
@@ -55,7 +55,14 @@
           </li>
         </ul>
         <a class="button"href="news.html">Все новости</a>
-
+      </section>
+      <section class="gallery">
+        <h2>ФОТОГАЛЕРЕЯ</h2>
+        <figure class="gallery-content">
+          <a href="#"><img src="img/studio.jpg" width="286" height="164" alt="Интерьер"></a>
+        </figure>
+        <span class="button gallery-button gallery-button-back">Назад</span>
+        <span class="button gallery-button gallery-button-next">Вперед</span>
       </section>
     </main>
 
