--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
         <span class="button gallery-button gallery-button-back">Назад</span>
         <span class="button gallery-button gallery-button-next">Вперед</span>
       </section>
+      <section class="contacts">
+        <h2>КОНТАКТНАЯ ИНФОРМАЦИЯ</h2>
+        <p>БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+          АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8<br>
+          ТЕЛЕФОН: +7 (495) 666-02-66
+        </p>
+        <p>ВРЕМЯ РАБОТЫ:<br>
+          ПН—ПТ: С 10:00 ДО 22:00<br>
+          СБ—ВС: С 10:00 ДО 19:00
+        </p>
+        <a class="button" href="map.html">КАК ПРОЕХАТЬ</a>
+        <a class="button" href="contacts.html">ОБРАТНАЯ СВЯЗЬ</a>
+      </section>
     </main>
 
 
