--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
         <a class="button" href="map.html">КАК ПРОЕХАТЬ</a>
         <a class="button" href="contacts.html">ОБРАТНАЯ СВЯЗЬ</a>
       </section>
+      <section class="appoinment">
+        <h2>ЗАПИСАТЬСЯ</h2>
+        <p>УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
+        <!--Здесь будет форма-->
+      </section>
     </main>
 
 
