--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="container">
       <h1 class="visually-hidden">Барбершоп "Бородинский"</h1>
       <section class="features">
-        <h2 class="visually-hidden">Преимущества</h2>
+        <h2 class="visually-hidden">ПРЕИМУЩЕСТВА</h2>
         <ul class="features-list">
           <li class="features-item">
             <h3>БЫСТРО</h3>
@@ -83,7 +83,26 @@
         <!--Здесь будет форма-->
       </section>
     </main>
+    <footer class="main-footer">
+      <p class="footer-contacts">
+        БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+        АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8<br>
+        <a href="map.html">КАК НАС НАЙТИ?</a><br>
+        ТЕЛЕФОН: +7 (495) 666-02-66
+      </p>
+      <div class="footer-social">
+        <b>ДАВАЙТЕ ДРУЖИТЬ!</b>
+        <ul>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <b>РАЗРАБОТАНО:</b> 
+        <a class="button" href="https://htmlacademy.ru">HTML ACADEMY</a>
+      </p>
 
-
+    </footer>
   </body>
 </html>
