--- a/index.html
+++ b/index.html
@@ -99,10 +99,14 @@
         </ul>
       </div>
       <p class="footer-copyright">
-        <b>РАЗРАБОТАНО:</b> 
+        <b>РАЗРАБОТАНО:</b>
         <a class="button" href="https://htmlacademy.ru">HTML ACADEMY</a>
       </p>
-
     </footer>
+    <section class="modal modal-login">
+      <h2>Личный кабинет</h2>
+      <p>Введите свой логин и пароль</p>
+      <!--Здесь будет форма-->
+    </section>
   </body>
 </html>
