--- a/catalog.html
+++ b/catalog.html
@@ -25,8 +25,14 @@
     <main class="container">
       <h1 class="page-title">СРЕДСТВА ДЛЯ УХОДА</h1>
       <ul class="breadcrumbs">
-
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li class="breadcrumbs-current">Средства для ухода</li>
       </ul>
+      <section class="filters">
+        <h2 class="visually-hidden">Фильтр товаров</h2>
+        <!-- Здесь будет форма -->
+      </section>
     </main>
 
 
