--- a/catalog.html
+++ b/catalog.html
@@ -33,6 +33,119 @@
         <h2 class="visually-hidden">Фильтр товаров</h2>
         <!-- Здесь будет форма -->
       </section>
+      <section class="catalog">
+        <h2 class="visually-hidden">Список средств по уходу</h2>
+        <ul class="catalog-list">
+
+          <!-- Товар-1 -->
+
+          <li class="catalog-item">
+            <h3><a href="catalog-item.html">
+                  <span class="catalog-category">Набор для путешествий</span>
+                  <span  class="catalog-item-title">«Baxter of California»</span>                </a>
+            </h3>
+            <p>
+              <a href="#">
+                <img src="img/product-1.jpg" width="220" height="165"
+                alt="Набор для путешествий «Baxter of California»">
+              </a>
+            </p>
+            <p class="catalog-item-price"><b>2 900 ₽</b>
+              <a class="button" href="#">Купить</a>
+            </p>
+          </li>
+
+          <!-- Товар-2 -->
+
+          <li class="catalog-item">
+            <h3><a href="catalog-item.html">
+                  <span class="catalog-category">Увлажняющий кондиционер</span>
+                  <span  class="catalog-item-title">«Baxter of California»</span>                </a>
+            </h3>
+            <p>
+              <a href="#">
+                <img src="img/product-2.jpg" width="220" height="165"
+                alt="Увлажняющий кондиционер «Baxter of California»">
+              </a>
+            </p>
+            <p class="catalog-item-price"><b>750 ₽</b>
+              <a class="button" href="#">Купить</a>
+            </p>
+          </li>
+
+          <!-- Товар-3 -->
+
+          <li class="catalog-item">
+            <h3><a href="catalog-item.html">
+                  <span class="catalog-category">Гель для волос</span>
+                  <span  class="catalog-item-title">«SUAVECITO»</span>                </a>
+            </h3>
+            <p>
+              <a href="#">
+                <img src="img/product-3.jpg" width="220" height="165"
+                alt="Гель для волос «SUAVECITO»">
+              </a>
+            </p>
+            <p class="catalog-item-price"><b>290 ₽</b>
+              <a class="button" href="#">Купить</a>
+            </p>
+          </li>
+
+          <!-- Товар-4 -->
+
+          <li class="catalog-item">
+            <h3><a href="catalog-item.html">
+                  <span class="catalog-category">Глина для укладки волос</span>
+                  <span  class="catalog-item-title">«American crew»</span>                </a>
+            </h3>
+            <p>
+              <a href="#">
+                <img src="img/product-4.jpg" width="220" height="165"
+                alt="Глина для укладки волос «American crew»">
+              </a>
+            </p>
+            <p class="catalog-item-price"><b>500 ₽</b>
+              <a class="button" href="#">Купить</a>
+            </p>
+          </li>
+
+          <!-- Товар-5 -->
+
+          <li class="catalog-item">
+            <h3><a href="catalog-item.html">
+                  <span class="catalog-category">Гель для волос</span>
+                  <span  class="catalog-item-title">«AMERICAN CREW»</span>                </a>
+            </h3>
+            <p>
+              <a href="#">
+                <img src="img/product-5.jpg" width="220" height="165"
+                alt="Гель для волос «AMERICAN CREW»">
+              </a>
+            </p>
+            <p class="catalog-item-price"><b>3 00 ₽</b>
+              <a class="button" href="#">Купить</a>
+            </p>
+          </li>
+
+          <!-- Товар-6 -->
+
+          <li class="catalog-item">
+            <h3><a href="catalog-item.html">
+                  <span class="catalog-category">Набор для бритья</span>
+                  <span  class="catalog-item-title">«Baxter of California»</span>                </a>
+            </h3>
+            <p>
+              <a href="#">
+                <img src="img/product-6.jpg" width="220" height="165"
+                alt="Набор для бритья «Baxter of California»">
+              </a>
+            </p>
+            <p class="catalog-item-price"><b>3 900 ₽</b>
+              <a class="button" href="#">Купить</a>
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
 
 
