--- a/catalog.html
+++ b/catalog.html
@@ -150,10 +150,29 @@
           <li class="pagination-item pagination-item-current"><a>2</a></li>
           <li class="pagination-item"><a href="#">3</a></li>
           <li class="pagination-item"><a href="#">4</a></li>
-
         </ul>
       </section>
     </main>
+    <footer class="main-footer">
+      <p class="footer-contacts">
+        БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+        АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8<br>
+        <a href="map.html">КАК НАС НАЙТИ?</a><br>
+        ТЕЛЕФОН: +7 (495) 666-02-66
+      </p>
+      <div class="footer-social">
+        <b>ДАВАЙТЕ ДРУЖИТЬ!</b>
+        <ul>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <b>РАЗРАБОТАНО:</b>
+        <a class="button" href="https://htmlacademy.ru">HTML ACADEMY</a>
+      </p>
+    </footer>
 
 
   </body>
