--- a/catalog.html
+++ b/catalog.html
@@ -173,6 +173,12 @@
         <a class="button" href="https://htmlacademy.ru">HTML ACADEMY</a>
       </p>
     </footer>
+    <section class="modal modal-login">
+      <h2>Личный кабинет</h2>
+      <p>Введите свой логин и пароль</p>
+      <!--Здесь будет форма-->
+      <span class="modal-close">x</span>
+    </section>
 
 
   </body>
