--- a/catalog-item.html
+++ b/catalog-item.html
@@ -30,7 +30,16 @@
         <li><a href="#">Средства для ухода</a></li>
         <li class="breadcrumbs-current">Набор для путешествий «Baxter of California»</li>
       </ul>
-      
+      <section class="product-photos">
+         <h2 class="visually-hidden">Изображения товаров</h2>
+         <p>
+           <img src="img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
+        </p>
+        <img src="img/product-small-1.jpg" width="140" height="149" alt="Фото в анфас">
+        <img src="img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль">
+        <img src="img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части">
+
+      </section>
     </main>
 
   </body>
