--- a/catalog-item.html
+++ b/catalog-item.html
@@ -32,13 +32,20 @@
       </ul>
       <section class="product-photos">
          <h2 class="visually-hidden">Изображения товаров</h2>
-         <p>
+         <p class="product-photo-full">
            <img src="img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
         </p>
-        <img src="img/product-small-1.jpg" width="140" height="149" alt="Фото в анфас">
-        <img src="img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль">
-        <img src="img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части">
-
+        <ul class="product-photo-preview">
+          <li><img src="img/product-small-1.jpg" width="140" height="149" alt="Фото в анфас"></li>
+          <li><img src="img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль"></li>
+          <li><img src="img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части"></li>
+        </ul>
+      </section>
+      <section class="product-info">
+        <h2 class="visually-hidden">Описание товара</h2>
+        <p class="product-availability">Есть в наличии</p>
+        <p class="product-article">Артикул: dexter-ae</p>
+        <p class="product-text">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
       </section>
     </main>
 
