--- a/catalog-item.html
+++ b/catalog-item.html
@@ -60,6 +60,31 @@
         </ul>
       </section>
     </main>
-
+    <footer class="main-footer">
+      <p class="footer-contacts">
+        БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+        АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8<br>
+        <a href="map.html">КАК НАС НАЙТИ?</a><br>
+        ТЕЛЕФОН: +7 (495) 666-02-66
+      </p>
+      <div class="footer-social">
+        <b>ДАВАЙТЕ ДРУЖИТЬ!</b>
+        <ul>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <b>РАЗРАБОТАНО:</b>
+        <a class="button" href="https://htmlacademy.ru">HTML ACADEMY</a>
+      </p>
+    </footer>
+    <section class="modal modal-login">
+      <h2>Личный кабинет</h2>
+      <p>Введите свой логин и пароль</p>
+      <!--Здесь будет форма-->
+      <span class="modal-close">x</span>
+    </section>
   </body>
 </html>
