--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/index-logo.svg" width="368" height="153"alt="Логотип барбершопа Бородинский">
+          <img src="img/index-logo.svg" width="368" height="153"alt="Логотип барбершопа  «Бородинский»">
         </a>
         <ul class="site-navigation">
           <li><a href="info.html">Информация</a></li>
@@ -18,7 +18,8 @@
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <li class="login-link">Вход</li>
+          <li class="login-link">
+            <a href="login.html">Вход</a></li>
         </ul>
       </nav>
     </header>
@@ -61,8 +62,8 @@
         <figure class="gallery-content">
           <a href="#"><img src="img/studio.jpg" width="286" height="164" alt="Интерьер"></a>
         </figure>
-        <span class="button gallery-button gallery-button-back">Назад</span>
-        <span class="button gallery-button gallery-button-next">Вперед</span>
+        <button class="button gallery-button gallery-button-back" type="button">Назад</button>
+        <button class="button gallery-button gallery-button-next" type="button">Вперед</button>
       </section>
       <section class="contacts">
         <h2>КОНТАКТНАЯ ИНФОРМАЦИЯ</h2>
@@ -77,10 +78,28 @@
         <a class="button" href="map.html">КАК ПРОЕХАТЬ</a>
         <a class="button" href="contacts.html">ОБРАТНАЯ СВЯЗЬ</a>
       </section>
-      <section class="appoinment">
+      <section class="appointment">
         <h2>ЗАПИСАТЬСЯ</h2>
-        <p>УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
-        <!--Здесь будет форма-->
+        <p class="appointment-info">УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
+        <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
+          <p class="appointment-item">
+            <label for="appointment-date">Дата</label>
+            <input id="appointment-date" type="text" name="date" value="" placeholder="8.10.2017">
+          </p>
+          <p class="appointment-item">
+            <label for="appointment-time">Время</label>
+            <input id="appointment-time" type="text" name="time" value="" placeholder="10:00">
+          </p>
+          <p class="appointment-item">
+            <label for="appointment-name">Ваше имя</label>
+            <input id="appointment-name" type="text" name="name" value="" placeholder="Олег">
+          </p>
+          <p class="appointment-item">
+            <label for="appointment-phone">Телефон</label>
+            <input id="appointment-phone" type="text" name="phone" value="" placeholder="+7 123 456-78-90">
+          </p>
+          <button class="button" type="submit" name="button">Отправить</button>
+        </form>
       </section>
     </main>
     <footer class="main-footer">
