--- a/catalog.html
+++ b/catalog.html
@@ -86,16 +86,16 @@
           <!-- Товар-1 -->
 
           <li class="catalog-item">
-            <h3><a href="catalog-item.html">
-                  <span class="catalog-category">Набор для путешествий</span>
-                  <span  class="catalog-item-title">«Baxter of California»</span>                </a>
-            </h3>
-            <p>
-              <a href="#">
+            <a href="catalog-item.html">
+              <h3>
+                <span class="catalog-category">Набор для путешествий</span>
+                <span  class="catalog-item-title">«Baxter of California»</span>
+              </h3>
+              <p class="catalog-item-image">
                 <img src="img/product-1.jpg" width="220" height="165"
                 alt="Набор для путешествий «Baxter of California»">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="catalog-item-price"><b>2 900 ₽</b>
               <a class="button" href="#">Купить</a>
             </p>
@@ -104,16 +104,16 @@
           <!-- Товар-2 -->
 
           <li class="catalog-item">
-            <h3><a href="catalog-item.html">
-                  <span class="catalog-category">Увлажняющий кондиционер</span>
-                  <span  class="catalog-item-title">«Baxter of California»</span>                </a>
-            </h3>
-            <p>
-              <a href="#">
+            <a href="catalog-item.html">
+              <h3>
+                <span class="catalog-category">Увлажняющий кондиционер</span>
+                <span  class="catalog-item-title">«Baxter of California»</span>
+              </h3>
+              <p>
                 <img src="img/product-2.jpg" width="220" height="165"
                 alt="Увлажняющий кондиционер «Baxter of California»">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="catalog-item-price"><b>750 ₽</b>
               <a class="button" href="#">Купить</a>
             </p>
@@ -122,16 +122,16 @@
           <!-- Товар-3 -->
 
           <li class="catalog-item">
-            <h3><a href="catalog-item.html">
-                  <span class="catalog-category">Гель для волос</span>
-                  <span  class="catalog-item-title">«SUAVECITO»</span>                </a>
-            </h3>
-            <p>
-              <a href="#">
+            <a href="catalog-item.html">
+              <h3>
+                <span class="catalog-category">Гель для волос</span>
+                <span  class="catalog-item-title">«SUAVECITO»</span>
+              </h3>
+              <p>
                 <img src="img/product-3.jpg" width="220" height="165"
                 alt="Гель для волос «SUAVECITO»">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="catalog-item-price"><b>290 ₽</b>
               <a class="button" href="#">Купить</a>
             </p>
@@ -140,16 +140,16 @@
           <!-- Товар-4 -->
 
           <li class="catalog-item">
-            <h3><a href="catalog-item.html">
-                  <span class="catalog-category">Глина для укладки волос</span>
-                  <span  class="catalog-item-title">«American crew»</span>                </a>
-            </h3>
-            <p>
-              <a href="#">
+            <a href="catalog-item">
+              <h3>
+                <span class="catalog-category">Глина для укладки волос</span>
+                <span  class="catalog-item-title">«American crew»</span>
+              </h3>
+              <p>
                 <img src="img/product-4.jpg" width="220" height="165"
-                alt="Глина для укладки волос «American crew»">
-              </a>
-            </p>
+                  alt="Глина для укладки волос «American crew»">
+              </p>
+            </a>
             <p class="catalog-item-price"><b>500 ₽</b>
               <a class="button" href="#">Купить</a>
             </p>
@@ -158,16 +158,16 @@
           <!-- Товар-5 -->
 
           <li class="catalog-item">
-            <h3><a href="catalog-item.html">
-                  <span class="catalog-category">Гель для волос</span>
-                  <span  class="catalog-item-title">«AMERICAN CREW»</span>                </a>
-            </h3>
-            <p>
-              <a href="#">
+            <a href="catalog-item">
+              <h3>
+                <span class="catalog-category">Гель для волос</span>
+                <span  class="catalog-item-title">«AMERICAN CREW»</span>
+              </h3>
+              <p>
                 <img src="img/product-5.jpg" width="220" height="165"
                 alt="Гель для волос «AMERICAN CREW»">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="catalog-item-price"><b>3 00 ₽</b>
               <a class="button" href="#">Купить</a>
             </p>
@@ -176,16 +176,16 @@
           <!-- Товар-6 -->
 
           <li class="catalog-item">
-            <h3><a href="catalog-item.html">
-                  <span class="catalog-category">Набор для бритья</span>
-                  <span  class="catalog-item-title">«Baxter of California»</span>                </a>
-            </h3>
-            <p>
-              <a href="#">
+            <a href="catalog-item">
+              <h3>
+                <span class="catalog-category">Набор для бритья</span>
+                <span  class="catalog-item-title">«Baxter of California»</span>
+              </h3>
+              <p>
                 <img src="img/product-6.jpg" width="220" height="165"
                 alt="Набор для бритья «Baxter of California»">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="catalog-item-price"><b>3 900 ₽</b>
               <a class="button" href="#">Купить</a>
             </p>
