--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,7 @@
                 <label for="filter-malin-goetz">Malin+Goetz</label>
               </li>
               <li class="filter-option">
-                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" id="filter-murrays" name="murrays">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" id="filter-murrays" name="murrays" disabled>
                 <label for="filter-murrays">Murray's</label>
               </li>
               <li class="filter-option">
