--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </nav>
     </header>
     <main class="container">
-      <h1 class="visually-hidden">Барбершоп "Бородинский"</h1>
+      <h1 class="visually-hidden">Барбершоп "ородинский"</h1>
       <section class="features">
         <h2 class="visually-hidden">ПРЕИМУЩЕСТВА</h2>
         <ul class="features-list">
